# AegisGate

./: .gitignore  README.md  RELEASE_NOTES.md  SECURITY.md  build.ps1  create_usb.ps1  run_qemu.ps1
agent/: CMakeLists.txt
agent/resources/: aegisgate.manifest  aegisgate.rc
agent/src/: main.cpp  vmcall_direct.cpp  vmcall_direct.h  vmcall_stub.asm
boot/AegisGatePkg/: AegisGate.inf  AegisGatePkg.dec  AegisGatePkg.dsc
boot/AegisGatePkg/asm/: cpuid_check.asm
boot/AegisGatePkg/include/: efi_cpp_runtime.h
boot/AegisGatePkg/src/: chain_boot.cpp  hardware_probe.cpp  hardware_probe.h  hotkey.cpp  logo.cpp  main.cpp  settings.cpp  settings.h
common/asm/: common_macros.asm
common/include/: aegis_config.h  aegis_hypercalls.h  aegis_status.h  types.h
crypto/core/src/: aes_gcm.cpp  hardware_fingerprint.cpp
crypto/public/: aegis_crypto.h
hypervisor/core/asm/: svm_ops.asm  vmx_ops.asm
hypervisor/core/src/: hypervisor_init.cpp  stealth.cpp  vcpu.cpp  vcpu.h
hypervisor/hal/: hal_interface.h
hypervisor/hal/amd/: svm_hal.cpp  svm_hal.h  vmcb_fields.h
hypervisor/hal/intel/: vmx_hal.cpp  vmx_hal.h
hypervisor/protection/: kernel_integrity.cpp  kernel_integrity.h  usb_monitor.cpp  usb_monitor.h
installer/: CMakeLists.txt  aegisgate.nsi
installer/src/: hardware_check.cpp  hardware_check.h  installer_main.cpp  secure_boot.cpp  secure_boot.h  system_config.cpp  system_config.h
